Cleanup: Remove deprecated DTOs and update references in services and controllers