@@ -1,61 +1,70 @@
 package com.example.BookingApp.service;
 
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Service;
-
-import com.example.BookingApp.dto.event.EventDto;
-import com.example.BookingApp.dto.event.SeatDto;
-import com.example.BookingApp.dto.event.VenueDto;
+import com.example.BookingApp.dto.event.response.EventResponse;
+import com.example.BookingApp.dto.event.response.SeatResponse;
 import com.example.BookingApp.entity.Event;
-import com.example.BookingApp.entity.Seat;
 import com.example.BookingApp.entityenums.EventStatus;
 import com.example.BookingApp.entityenums.EventType;
 import com.example.BookingApp.entityenums.SeatStatus;
+import com.example.BookingApp.mapper.EventMapper;
+import com.example.BookingApp.mapper.SeatMapper;
 import com.example.BookingApp.repository.EventRepository;
 import com.example.BookingApp.repository.SeatRepository;
+import lombok.RequiredArgsConstructor;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
+@Transactional(readOnly = true)
 public class EventService {
     
-    @Autowired
-    private EventRepository eventRepository;
+    private final EventRepository eventRepository;
+    private final SeatRepository seatRepository;
+    private final EventMapper eventMapper;
+    private final SeatMapper seatMapper;
     
-    @Autowired
-    private SeatRepository seatRepository;
-    
-    public List<EventDto> getAllActiveEvents() {
+    public List<EventResponse> getAllActiveEvents() {
         List<Event> events = eventRepository.findByStatusOrderByEventDateAsc(EventStatus.ACTIVE);
-        return events.stream().map(this::convertToDto).collect(Collectors.toList());
+        return events.stream()
+                .map(this::mapEventWithSeatCounts)
+                .toList();
     }
     
-    public List<EventDto> getEventsByType(EventType eventType) {
+    public List<EventResponse> getEventsByType(EventType eventType) {
         List<Event> events = eventRepository.findByEventTypeAndStatusOrderByEventDateAsc(eventType, EventStatus.ACTIVE);
-        return events.stream().map(this::convertToDto).collect(Collectors.toList());
+        return events.stream()
+                .map(this::mapEventWithSeatCounts)
+                .toList();
     }
     
-    public List<EventDto> getEventsByDateRange(LocalDateTime startDate, LocalDateTime endDate) {
+    public List<EventResponse> getEventsByDateRange(LocalDateTime startDate, LocalDateTime endDate) {
         List<Event> events = eventRepository.findByDateRangeAndStatus(startDate, endDate, EventStatus.ACTIVE);
-        return events.stream().map(this::convertToDto).collect(Collectors.toList());
+        return events.stream()
+                .map(this::mapEventWithSeatCounts)
+                .toList();
     }
     
-    public List<EventDto> getEventsByCity(String city) {
+    public List<EventResponse> getEventsByCity(String city) {
         List<Event> events = eventRepository.findByCityAndStatus(city, EventStatus.ACTIVE);
-        return events.stream().map(this::convertToDto).collect(Collectors.toList());
+        return events.stream()
+                .map(this::mapEventWithSeatCounts)
+                .toList();
     }
     
-    public List<EventDto> searchEvents(String keyword) {
-        // Boş veya null keyword kontrolü
+    public List<EventResponse> searchEvents(String keyword) {
         if (keyword == null || keyword.trim().isEmpty()) {
             return getAllActiveEvents();
         }
         
         List<Event> events = eventRepository.findByKeywordAndStatus(keyword.trim(), EventStatus.ACTIVE);
-        return events.stream().map(this::convertToDto).collect(Collectors.toList());
+        return events.stream()
+                .map(this::mapEventWithSeatCounts)
+                .toList();
     }
     
     public List<String> getSearchSuggestions(String keyword) {
@@ -65,35 +74,25 @@ public class EventService {
         
         return eventRepository.findTitleSuggestions(keyword.trim(), EventStatus.ACTIVE)
                 .stream()
-                .limit(5) // En fazla 5 öneri
-                .collect(Collectors.toList());
+                .limit(5)
+                .toList();
     }
     
-    public List<EventDto> searchEventsByType(String keyword, EventType eventType) {
-        if (keyword == null || keyword.trim().isEmpty()) {
-            return getEventsByType(eventType);
-        }
-        
-        List<Event> events = eventRepository.findByEventTypeAndKeyword(eventType, keyword.trim(), EventStatus.ACTIVE);
-        return events.stream().map(this::convertToDto).collect(Collectors.toList());
+    public Optional<EventResponse> getEventById(Long eventId) {
+        return eventRepository.findById(eventId)
+                .map(this::mapEventWithSeats);
     }
     
-    // Şehir ile filtrelenmiş arama
-    public List<EventDto> searchEventsByCity(String keyword, String city) {
-        if (keyword == null || keyword.trim().isEmpty()) {
-            return getEventsByCity(city);
-        }
-        
-        List<Event> events = eventRepository.findByCityAndKeyword(city, keyword.trim(), EventStatus.ACTIVE);
-        return events.stream().map(this::convertToDto).collect(Collectors.toList());
+    public List<SeatResponse> getAvailableSeats(Long eventId) {
+        return seatRepository.findByEventIdAndStatus(eventId, SeatStatus.AVAILABLE)
+                .stream()
+                .map(seatMapper::toResponse)
+                .toList();
     }
     
-    // Gelişmiş arama - birden fazla filtre ile
-    public List<EventDto> advancedSearch(String keyword, EventType eventType, String city, 
-                                        LocalDateTime startDate, LocalDateTime endDate) {
-        List<Event> events;
-        
-        events = eventRepository.findByStatusOrderByEventDateAsc(EventStatus.ACTIVE);
+    public List<EventResponse> advancedSearch(String keyword, EventType eventType, String city, 
+                                            LocalDateTime startDate, LocalDateTime endDate) {
+        List<Event> events = eventRepository.findByStatusOrderByEventDateAsc(EventStatus.ACTIVE);
         
         return events.stream()
                 .filter(e -> keyword == null || keyword.trim().isEmpty() || 
@@ -105,11 +104,10 @@ public class EventService {
                            e.getEventDate().isEqual(startDate))
                 .filter(e -> endDate == null || e.getEventDate().isBefore(endDate) || 
                            e.getEventDate().isEqual(endDate))
-                .map(this::convertToDto)
-                .collect(Collectors.toList());
+                .map(this::mapEventWithSeatCounts)
+                .toList();
     }
     
-    // Arama kelimesi eşleşme kontrolü
     private boolean matchesKeyword(Event event, String keyword) {
         String lowerKeyword = keyword.toLowerCase();
         return (event.getTitle() != null && event.getTitle().toLowerCase().contains(lowerKeyword)) ||
@@ -119,76 +117,58 @@ public class EventService {
                 event.getVenue().getName().toLowerCase().contains(lowerKeyword));
     }
     
-    public Optional<EventDto> getEventById(Long eventId) {
-        Optional<Event> eventOpt = eventRepository.findById(eventId);
-        return eventOpt.map(this::convertToDtoWithSeats);
-    }
-    
-    public List<SeatDto> getAvailableSeats(Long eventId) {
-        List<Seat> seats = seatRepository.findByEventIdAndStatus(eventId, SeatStatus.AVAILABLE);
-        return seats.stream().map(this::convertSeatToDto).collect(Collectors.toList());
-    }
-    
-    private EventDto convertToDto(Event event) {
-        EventDto dto = new EventDto();
-        dto.setTitle(event.getTitle());
-        dto.setDescription(event.getDescription());
-        dto.setEventType(event.getEventType());
-        dto.setVenueId(event.getVenue().getId());
-        dto.setVenue(convertVenueToDto(event.getVenue()));
-        dto.setEventDate(event.getEventDate());
-        dto.setEventEndDate(event.getEventEndDate());
-        dto.setBookingStartDate(event.getBookingStartDate());
-        dto.setBookingEndDate(event.getBookingEndDate());
-        dto.setBasePrice(event.getBasePrice());
-        dto.setImageUrl(event.getImageUrl());
-        dto.setOrganizer(event.getOrganizer());
-        dto.setStatus(event.getStatus());
+    private EventResponse mapEventWithSeatCounts(Event event) {
+        EventResponse response = eventMapper.toResponse(event);
         
-        // Set seat counts
         long totalSeats = seatRepository.countByEventIdAndStatus(event.getId(), SeatStatus.AVAILABLE) +
                          seatRepository.countByEventIdAndStatus(event.getId(), SeatStatus.RESERVED) +
                          seatRepository.countByEventIdAndStatus(event.getId(), SeatStatus.BOOKED);
         long availableSeats = seatRepository.countByEventIdAndStatus(event.getId(), SeatStatus.AVAILABLE);
         
-        dto.setTotalSeatCount(totalSeats);
-        dto.setAvailableSeatCount(availableSeats);
+        return new EventResponse(
+            response.id(),
+            response.title(),
+            response.description(),
+            response.eventType(),
+            response.venue(),
+            response.eventDate(),
+            response.eventEndDate(),
+            response.bookingStartDate(),
+            response.bookingEndDate(),
+            response.basePrice(),
+            response.imageUrl(),
+            response.organizer(),
+            response.status(),
+            response.availableSeats(),
+            availableSeats,
+            totalSeats
+        );
+    }
+    
+    private EventResponse mapEventWithSeats(Event event) {
+        EventResponse response = mapEventWithSeatCounts(event);
+        List<SeatResponse> availableSeats = seatRepository.findByEventIdAndStatus(event.getId(), SeatStatus.AVAILABLE)
+                .stream()
+                .map(seatMapper::toResponse)
+                .toList();
         
-        return dto;
-    }
-    
-    private EventDto convertToDtoWithSeats(Event event) {
-        EventDto dto = convertToDto(event);
-        List<Seat> availableSeats = seatRepository.findByEventIdAndStatus(event.getId(), SeatStatus.AVAILABLE);
-        dto.setAvailableSeats(availableSeats.stream().map(this::convertSeatToDto).collect(Collectors.toList()));
-        return dto;
-    }
-    
-    private VenueDto convertVenueToDto(com.example.BookingApp.entity.Venue venue) {
-        VenueDto dto = new VenueDto();
-        dto.setId(venue.getId());
-        dto.setName(venue.getName());
-        dto.setAddress(venue.getAddress());
-        dto.setCity(venue.getCity());
-        dto.setCountry(venue.getCountry());
-        dto.setCapacity(venue.getCapacity());
-        dto.setDescription(venue.getDescription());
-        dto.setImageUrl(venue.getImageUrl());
-        return dto;
-    }
-    
-    private SeatDto convertSeatToDto(Seat seat) {
-        SeatDto dto = new SeatDto();
-        dto.setId(seat.getId());
-        dto.setEventId(seat.getEvent().getId());
-        dto.setSeatNumber(seat.getSeatNumber());
-        dto.setRowNumber(seat.getRowNumber());
-        dto.setSection(seat.getSection());
-        dto.setSeatType(seat.getSeatType());
-        dto.setStatus(seat.getStatus());
-        dto.setPrice(seat.getPrice());
-        dto.setXPosition(seat.getXPosition());
-        dto.setYPosition(seat.getYPosition());
-        return dto;
+        return new EventResponse(
+            response.id(),
+            response.title(),
+            response.description(),
+            response.eventType(),
+            response.venue(),
+            response.eventDate(),
+            response.eventEndDate(),
+            response.bookingStartDate(),
+            response.bookingEndDate(),
+            response.basePrice(),
+            response.imageUrl(),
+            response.organizer(),
+            response.status(),
+            availableSeats,
+            response.availableSeatCount(),
+            response.totalSeatCount()
+        );
     }
 }
